add comments for things that should be checked out

--- a/advanced_rag_playground.ipynb
+++ b/advanced_rag_playground.ipynb
@@ -682,10 +682,12 @@
     "from langchain_classic.prompts import PromptTemplate\n",
     "from langchain_classic.chains.question_answering import load_qa_chain\n",
     "\n",
+    "# Experiment with temperature 0.1-0.3 (probably 0.2 but idk) for more creative answers\n",
     "llm = Ollama(model=\"llama3\", temperature=0)\n",
     "\n",
     "# It is important to create a good custom prompt template, it will enforce the model to use the docs and cite them.\n",
     "# NOTE: Modify it according to the different documentation/expertise of the RAG.\n",
+    "# ?Maybe in the prompt dont tell it to say that it doesnt know, but answer something with a note that it wasn't found in the docs.\n",
     "template = \"\"\"\n",
     "You are a technical expert for Kubernetes. Your task is to provide a factually grounded answer \n",
     "based ONLY on the provided context. \n",
@@ -714,7 +716,7 @@
     "\ttemplate=template,\n",
     ")\n",
     "\n",
-    "# This chain specifically takes a list of Document objects\n",
+    "# https://github.com/sophiamyang/tutorials-LangChain/blob/main/LangChain_QA.ipynb\n",
     "chain = load_qa_chain(llm, chain_type=\"stuff\", prompt=PROMPT)\n",
     "\n",
     "# query = \"How to configure resource limits for a Pod?\"\n",
